--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ django-filter = "^24.1"
 celery = "^5.3.6"
 redis = "^5.0.3"
 django-environ = "^0.11.2"
+django-sql-utils = "^0.7.0"
 
 
 [build-system]
