--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ celery = "^5.3.6"
 redis = "^5.0.3"
 django-environ = "^0.11.2"
 django-sql-utils = "^0.7.0"
+django-crispy-forms = "^2.1"
+crispy-bootstrap4 = "^2024.1"
 
 
 [build-system]
