--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ django-crispy-forms = "^2.1"
 crispy-bootstrap4 = "^2024.1"
 flower = "^2.0.1"
 whitenoise = "^6.6.0"
+gunicorn = "^22.0.0"
 
 
 [build-system]
