--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ crispy-bootstrap4 = "^2024.1"
 flower = "^2.0.1"
 whitenoise = "^6.6.0"
 gunicorn = "^22.0.0"
+environ = "^1.0"
 
 
 [build-system]
