--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   django_gunicorn:
     volumes:
       - static:/static
+      - ./storage:/storage
     env_file:
       - storage/.env
     build:
@@ -14,7 +15,7 @@ services:
   nginx:
     build: ./nginx
     volumes:
-      - static:/static
+      - ./storage/static:/storage/static
     ports:
       - 80:80
     depends_on:
@@ -46,6 +47,21 @@ services:
       - nginx
       - redis
 
+  flower:
+    build:
+      context: .
+    ports:
+      - 5555:5555
+    command: celery -A storage.notification:app flower
+    restart: always
+    networks:
+      - appnet
+    depends_on:
+      - django_gunicorn
+      - nginx
+      - celery
+      - redis
+
 networks:
   appnet:
     driver: bridge
@@ -53,4 +69,5 @@ networks:
 
 volumes:
   static:
+  db_data:
 
