--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ flower = "^2.0.1"
 whitenoise = "^6.6.0"
 gunicorn = "^22.0.0"
 environ = "^1.0"
+django-easy-audit = "^1.3.6"
+django-widget-tweaks = "^1.5.0"
 
 
 [build-system]
