--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ amqp==5.2.0
 annotated-types==0.6.0
 asgiref==3.7.2
 asttokens==2.4.1
+beautifulsoup4==4.12.3
 billiard==4.2.0
 build==1.0.3
 CacheControl==0.13.1
@@ -21,10 +22,12 @@ distlib==0.3.8
 Django==5.0.1
 django-crispy-forms==2.1
 django-debug-toolbar==4.3.0
+django-easy-audit==1.3.6
 django-environ==0.11.2
 django-extensions==3.2.3
 django-filter==24.1
 django-sql-utils==0.7.0
+django-widget-tweaks==1.5.0
 dulwich==0.21.7
 environ==1.0
 executing==2.0.1
@@ -73,6 +76,7 @@ requests==2.31.0
 requests-toolbelt==1.0.0
 shellingham==1.5.4
 six==1.16.0
+soupsieve==2.5
 SQLite4==0.1.1
 sqlparse==0.4.4
 stack-data==0.6.3
