--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ gunicorn = "^22.0.0"
 environ = "^1.0"
 django-easy-audit = "^1.3.6"
 django-widget-tweaks = "^1.5.0"
+eventlet = "^0.36.1"
 
 
 [build-system]
