--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ environ = "^1.0"
 django-easy-audit = "^1.3.6"
 django-widget-tweaks = "^1.5.0"
 eventlet = "^0.36.1"
+django-celery-beat = "^2.6.0"
+django-celery-results = "^2.5.1"
 
 
 [build-system]
