--- a/requirements.txt
+++ b/requirements.txt
@@ -17,9 +17,12 @@ click-repl==0.3.0
 colorama==0.4.6
 crashtest==0.4.1
 crispy-bootstrap4==2024.1
+cron-descriptor==1.4.3
 decorator==5.1.1
 distlib==0.3.8
 Django==5.0.1
+django-celery-beat==2.6.0
+django-celery-results==2.5.1
 django-crispy-forms==2.1
 django-debug-toolbar==4.3.0
 django-easy-audit==1.3.6
@@ -27,13 +30,17 @@ django-environ==0.11.2
 django-extensions==3.2.3
 django-filter==24.1
 django-sql-utils==0.7.0
+django-timezone-field==6.1.0
 django-widget-tweaks==1.5.0
+dnspython==2.6.1
 dulwich==0.21.7
 environ==1.0
+eventlet==0.36.1
 executing==2.0.1
 fastjsonschema==2.19.1
 filelock==3.13.1
 flower==2.0.1
+greenlet==3.0.3
 gunicorn==22.0.0
 humanize==4.9.0
 idna==3.6
@@ -67,6 +74,7 @@ pydantic==2.6.4
 pydantic_core==2.16.3
 Pygments==2.17.2
 pyproject_hooks==1.0.0
+python-crontab==3.0.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 pywin32-ctypes==0.2.2
