--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,7 +75,10 @@ services:
   celery-beat:
     build:
       context: .
-    command: celery -A storage beat -l INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler
+    command: celery -A storage beat -l INFO
+    restart: always
+    volumes:
+      - ./storage:/storage
     networks:
       - appnet
     environment:
