--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,7 +6,7 @@ server {
     listen 80;
 
     location / {
-        proxy_pass http://django;
+        proxy_pass http://storage-monitor.ru;
     }
 
     location /static/ {
