--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ django-widget-tweaks = "^1.5.0"
 eventlet = "^0.36.1"
 django-celery-beat = "^2.6.0"
 django-celery-results = "^2.5.1"
+faker = "^25.1.0"
 
 
 [build-system]
