--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ dulwich==0.21.7
 environ==1.0
 eventlet==0.36.1
 executing==2.0.1
+Faker==25.1.0
 fastjsonschema==2.19.1
 filelock==3.13.1
 flower==2.0.1
