fix model constraints and orders, script for filling db

--- a/storage/.env.template
+++ b/storage/.env.template
@@ -1,1 +1,14 @@
-SECRET_KEY=key
+SECRET_KEY=""
+DEBUG=0
+ALLOWED_HOSTS=127.0.0.1
+CSRF_TRUSTED_ORIGINS=http://127.0.0.1:8080
+DB='db.sqlite3'
+EMAIL_HOST=
+EMAIL_PORT_SSL=
+EMAIL_PORT_TLS=
+EMAIL_HOST_USER=
+EMAIL_HOST_PASSWORD=
+DJANGO_LOG_LEVEL='WARNING'
+DJANGO_LOG_FILE=
+PERMISSION=
+USE_CELERY=0
